; ModuleID = '/home/carl/AnghaBench/linux/drivers/scsi/smartpqi/extr_smartpqi_init.c_pqi_raid_io_complete.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/scsi/smartpqi/extr_smartpqi_init.c_pqi_raid_io_complete.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.pqi_io_request = type { %struct.scsi_cmnd* }
%struct.scsi_cmnd = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.pqi_io_request*, i8*)* @pqi_raid_io_complete to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @pqi_raid_io_complete(%struct.pqi_io_request* %0, i8* %1) #0 {
  %3 = alloca %struct.pqi_io_request*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca %struct.scsi_cmnd*, align 8
  store %struct.pqi_io_request* %0, %struct.pqi_io_request** %3, align 8
  store i8* %1, i8** %4, align 8
  %6 = load %struct.pqi_io_request*, %struct.pqi_io_request** %3, align 8
  %7 = getelementptr inbounds %struct.pqi_io_request, %struct.pqi_io_request* %6, i32 0, i32 0
  %8 = load %struct.scsi_cmnd*, %struct.scsi_cmnd** %7, align 8
  store %struct.scsi_cmnd* %8, %struct.scsi_cmnd** %5, align 8
  %9 = load %struct.pqi_io_request*, %struct.pqi_io_request** %3, align 8
  %10 = call i32 @pqi_free_io_request(%struct.pqi_io_request* %9)
  %11 = load %struct.scsi_cmnd*, %struct.scsi_cmnd** %5, align 8
  %12 = call i32 @scsi_dma_unmap(%struct.scsi_cmnd* %11)
  %13 = load %struct.scsi_cmnd*, %struct.scsi_cmnd** %5, align 8
  %14 = call i32 @pqi_scsi_done(%struct.scsi_cmnd* %13)
  ret void
}

declare dso_local i32 @pqi_free_io_request(%struct.pqi_io_request*) #1

declare dso_local i32 @scsi_dma_unmap(%struct.scsi_cmnd*) #1

declare dso_local i32 @pqi_scsi_done(%struct.scsi_cmnd*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
